--- a/eboard.yml
+++ b/eboard.yml
@@ -28,3 +28,9 @@
             role: wowie
             name: Felicia guo
             ama: Programming Languages, Bread Baking
+            
+        -
+            netid: ped48
+            role: wowie
+            name: Priyanka Dilip
+            ama: Programming Languages, Bread Baking
