--- a/eboard.yml
+++ b/eboard.yml
@@ -138,7 +138,7 @@
             ama: Programming Languages, Bread Baking
 
 -   
-    team: General Adminstrative Assistants
+    team: GAA
     members: 
         -
             netid: mk864
