--- a/merch.yml
+++ b/merch.yml
@@ -3,222 +3,49 @@
    team: Featured Designs
    members:
        -
-            netid: cc2295
-            role: President
-            name: Caroline Chu
-            ama: Programming Languages, Bread Baking
-      
+            title: IEEE 2018
+            subtitle: M, L, XL available
+            image1: 2018Back.png
+            image2: 2018Front.png
+
        -
-            netid: kzy2
-            role: President
-            name: Kevin Ying
-            ama: Programming Languages, Bread Baking
+            title: IEEE 2015
+            subtitle: M, L, XL available
+            image1: 2015Front.png
+            image2: 2015Back.png
 
 -
     team: Past Designs
     members: 
         -
-            netid: lpr46
-            role: Corporate Director
-            name: Laasya Renganathan
-            ama: Programming Languages, Bread Baking
+            title: All Work All Play
+            subtitle: XL available
+            image1: anonshirt.jpeg
+            image2: BlackBack.png
 
         -
-            netid: gnt4
-            role: Corporate
-            name: Grace Tan
-            ama: Programming Languages, Bread Baking
+            title: IEEE XPlore
+            subtitle: M, L, XL available
+            image1: blueFront.png
+            image2: blueBack.png
             
         -
-            netid: sj397
-            role: Corporate
-            name: Sanskriti Joshi  
-            ama: Programming Languages, Bread Baking
+            title: Hertz
+            subtitle: L available
+            image1: WattFront.png
+            image2: BlackFront2.png
 
         -
-            netid: asl247
-            role: Corporate
-            name: Alexander La Cour  
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: sk2735
-            role: Corporate
-            name: Brian Kim  
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: kwf37
-            role: Corporate
-            name: Kenneth Fang  
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: ak2255
-            role: Corporate
-            name: Alisha Kochar  
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: djb326
-            role: Corporate
-            name: Daniel Buscaglia  
-            ama: Programming Languages, Bread Baking
+            title: Big IEEE
+            subtitle: S, M available
+            image1: blackFront.png
+            image2: WattBack.png
 
 -
-    team: GAA
+    team: Accessories
     members:
         -
-            netid: mk864
-            role: Corporate
-            name: Mira Kim  
-            ama: Programming Languages, Bread Baking
-
-	    -
-            netid: jt658
-            role: Corporate
-            name: Jessica Tawade  
-            ama: Programming Languages, Bread Baking
-
--   
-    team: Web
-    members:
-
-	    -
-            netid: rp442
-            role: Web Director
-            name: Rohan Patel
-            ama: Programming Languages, Bread Baking 
-        
-	    -
-            netid: kwf37
-            role: Web
-            name: Kenneth Fang
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: fbg6
-            role: Web 
-            name: Felicia guo
-            ama: Programming Languages, Bread Baking
-            
-        -
-            netid: ped48
-            role: Web
-            name: Priyanka Dilip
-            ama: Programming Languages, Bread Baking
-
--   
-    team: Publicity
-    members:
-
-	    -
-            netid: jct263
-            role: Publicity Director
-            name: Joy Thean
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: vct26
-            role: Publicity Director
-            name: Victoria Tu
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: tk455
-            role: Publicity
-            name: Thinesiya Krishnathasan
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: as2855
-            role: Publicity
-            name: Alice Song
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: hh494
-            role: Publicity
-            name: Sheena Huang
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: cw683
-            role: Publicity
-            name: Crystal Wu
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: kdb72
-            role: Publicity
-            name: Kelsie Barnes
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: ll556
-            role: Publicity
-            name: Lois Lee
-            ama: Programming Languages, Bread Baking 
-
--   
-    team: Social
-    members:
-
-	    -
-            netid: cck78
-            role: Social Director
-            name: Chloe Kuo
-            ama: Programming Languages, Bread Baking 
-
-        -
-            netid: afl59
-            role: Social Director
-            name: Alexander Li
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: sb2276
-            role: Social
-            name: Sheila Balu
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: vd89
-            role: Social 
-            name: Vaishnavi Dhulkhed
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: vd89
-            role: Social 
-            name: Vaishnavi Dhulkhed
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: kmm398
-            role: Social 
-            name: Katarina Martucci
-            ama: Programming Languages, Bread Baking
-
-        -
-            netid: aa2224
-            role: Social 
-            name: Aditi Agarwal
-            ama: Programming Languages, Bread Baking
-
--   
-   team: Treasury
-   members:
-       -
-            netid: dms486
-            role: Treasury Director
-            name: Diane Sutyak
-            ama: Programming Languages, Bread Baking
-      
-       -
-            netid: coe7
-            role: Treasury Director
-            name: Orby Egboga
-            ama: Programming Languages, Bread Baking
-
-        
+            title: IEEE Bracelet
+            subtitle: Available
+            image1: IEEEBracelet.png
+            image2: IEEEBracelet.png
